# projeto-IA

./: README.md
.github/workflows/: backend.yml  frontend.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  api.http  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3343f8aebd7e_initial_users.py  3b1795639820_.py  3c1d2a8b4e71_add_conversation_id_to_messages.py  8d2f2d7b9c41_users_id_uuid.py  b7e8f1d2940a_create_messages_table.py
backend/src/: main.py
backend/src/api/: error_handlers.py
backend/src/api/routes/: ai.py  messages.py  upload.py
backend/src/api/schemas/: message_schema.py
backend/src/application/use_cases/: __init__.py  answer_question.py  ingest_document.py  message_history.py
backend/src/core/: config.py  dependecies.py  dependencies.py  security.py
backend/src/domain/: exceptions.py  message.py  ports.py
backend/src/infrastructure/adapters/: __init__.py  faiss_vector_store_adapter.py  openai_embeddings_adapter.py  pdf_text_extractor.py
backend/src/infrastructure/database/: __init__.py  models.py  session.py
backend/src/infrastructure/gateways/: embbeding_service.py  faiss_store.py  pdf_service.py  postgres_message_history.py
backend/src/presentation/: __init__.py
backend/src/presentation/errors/: error_handlers.py
backend/src/presentation/routes/: ai.py  auth.py  messages.py  upload.py
backend/src/presentation/schemas/: ai_schema.py  message_schema.py  user_schema.py
backend/src/schemas/: ai_schema.py
backend/src/services/: ai_service.py  embbeding_service.py  ingestion_service.py  pdf_service.py  rag_service.py
backend/src/vectorstore/: faiss_store.py
backend/src/workers/: celery_app.py  email_tasks.py
backend/tests/: conftest.py
backend/tests/api/: test_routes.py
backend/tests/use_cases/: test_answer_question.py  test_ingest_document.py
frontend/: .env.example  biome.json  package-lock.json  package.json  postcss.config.mjs  vitest.config.ts  vitest.setup.ts
frontend/app/: page.tsx
frontend/scripts/: check-auth-pages.mjs
frontend/src/app/: env.ts  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/: api-error-message.ts
frontend/src/server/: auth-api.test.ts  auth-api.ts  chat-api.test.ts  chat-api.ts
frontend/src/types/: chat.ts
(+24 files in other folders)
