[project]
name = "docmind-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "python-dotenv",
  "pydantic-settings",
  "langchain-openai",
  "pypdf",
  "python-multipart",
  "langchain>=1.2.17",
  "langchain-text-splitters",
  "faiss-cpu>=1.13.2",
  "numpy",
  "tiktoken>=0.12.0",
  "sqlalchemy>=2.0.49",
  "psycopg[binary]>=3.3.4",
]

[tool.black]
line-length = 100
[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=8.4.2",
    "ruff>=0.15.12",
]
